# fed-vit-autorl

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AUTONOMOUS_SDLC_BREAKTHROUGH_COMPLETE.md  AUTONOMOUS_SDLC_COMPLETE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  Dockerfile  GENERATION_4_AUTONOMOUS_SDLC_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  Makefile  PROJECT_CHARTER.md  README.md  RESEARCH_ENHANCEMENTS.md  RESEARCH_VALIDATION_COMPLETE.md  SECURITY.md  autonomous_research_complete.json  docker-compose.yml  generation2_validation_complete.json  install_deps.sh  optimized_training_report.json  pyproject.toml  quality_report.json  robust_training_report.json  security_audit_complete.json  test_basic_imports.py  test_generation2.py  test_generation2_final.py  test_generation2_minimal.py  test_generation2_simple.py  (+5 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: project-metrics.json
.terragon/: README.md  config.yaml  value-metrics.json
.terragon/scripts/: autonomous-execution.sh  claude-flow-integration.sh  value-discovery.py
configs/: production.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 0001-architecture-decision-record-template.md  0002-federated-learning-architecture.md
docs/deployment/: build-guide.md
docs/guides/: README.md
docs/monitoring/: observability-guide.md
docs/runbooks/: incident-response.md
docs/workflows/: README.md  SETUP_REQUIRED.md
examples/: generation1_simple_training.py
fed_vit_autorl/: __init__.py  _version.py  error_handling.py  logging_config.py  optimized_training.py  quality_gates.py  robust_training.py  simple_training.py
fed_vit_autorl/autonomous/: __init__.py  self_improving_system.py
fed_vit_autorl/autonomous_sdlc/: __init__.py  adaptive_code_gen.py  autonomous_deployment.py  publication_pipeline.py  research_discovery.py  sdlc_orchestrator.py  self_improving_system.py  validation_framework.py
fed_vit_autorl/compliance/: __init__.py  gdpr_compliance.py
fed_vit_autorl/deployment/: __init__.py  deployment_manager.py  hyperscale_federation.py
fed_vit_autorl/edge/: __init__.py  optimization.py
fed_vit_autorl/evaluation/: __init__.py  metrics.py
fed_vit_autorl/federated/: __init__.py  advanced_aggregation.py  aggregation.py  client.py  communication.py  privacy.py  server.py
fed_vit_env/: pyvenv.cfg
final_autonomous_sdlc_results/: comprehensive_autonomous_sdlc_report.json
monitoring/: alert_rules.yml  prometheus.yml
publication_materials/: conference_submission.md  enhanced_ieee_paper.md  ieee_abstract.md  mathematical_formulations.tex  presentation_outline.md  research_presentation.md  submission_checklist.md
research_validation_results/: detailed_results.json  research_validation_report.md
scripts/: deploy.sh  quality_gates.py
tests/: __init__.py  conftest.py  test_advanced_components.py  test_models.py
(+83 files in other folders)
